still fixing spacing pt 6

--- a/src/components/HowItWorksPage.css
+++ b/src/components/HowItWorksPage.css
@@ -50,7 +50,7 @@
 
 /* Tutorial Video Section */
 .tutorial-video-section {
-  margin-top: 80px;
+  margin-top: 40px;
   margin-bottom: 80px;
 }
 
